# adams-text-utils

./: README.md  pyproject.toml
adams_text_utils/: __init__.py  misc.py  pretty_number_arrays_in_code.py  table_utils.py  tick_iterator.py
tests/: test_misc.py  test_numpys.py  test_table.py  test_ticks.py
