[tool.poetry]
name = "adams-text-utils"
version = "0.1.0"
description = "Various text processing utilities I use in my projects"
authors = ["Adam Ryczkowski <adam@statystyka.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
